demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: k8s-formation
  labels:
    run: nginx
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: nginx
